--- a/src/scss/_Name.scss
+++ b/src/scss/_Name.scss
@@ -3,7 +3,7 @@
 */
 @import url('https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat');
 header {
-    background-image: url(./img/bg1.jpeg);
+    background-image: url(../img/bg1.jpeg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -21,8 +21,14 @@ header {
 .text1{
     font-size: 4em;
     font-style: italic;
-    margin-top: 25%;
+    margin-top: 23%;
     font-family: 'Kaushan Script', cursive;
+}
+
+.text2{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 900;
+    font-size: 200%;
 }
 
 .btn {
