--- a/src/scss/_Name.scss
+++ b/src/scss/_Name.scss
@@ -1,44 +1,43 @@
-/* 
-    bg: #222222
-*/
-@import url('https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat');
+@import './_variables.scss';
+
 header {
     background-image: url(../img/bg1.jpeg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    color: white;
+    color: $neutro;
     height: 100vh;
     top: 0px;
-    font-family: 'Montserrat', sans-serif;
-}
-
-.welcome{
-    height: inherit;
+    font-family: $font1;
     text-align: center;
-}
-
-.text1{
-    font-size: 4em;
-    font-style: italic;
-    margin-top: 23%;
-    font-family: 'Kaushan Script', cursive;
-}
-
-.text2{
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 900;
-    font-size: 200%;
-}
-
-.btn {
-    background-color: #ff685d !important;
-    border: none !important;
-    border-radius: 2px;
-    padding: 20px 50px;
-    font-weight: bold;
-    font-size: 1.4em;
-    margin-top: 5%;
-    margin-bottom: 15%;
-    font-family: 'Montserrat', sans-serif !important;
+    .description{
+        height: inherit;
+        h1.text1{
+            font-size: 4em;
+            font-style: italic;
+            margin-top: 23%;
+            font-family: $font2;
+        }
+        p.text2{
+            font-family: $font1;
+            font-weight: 900;
+            font-size: 200%;
+        }
+        a.btn{
+            @include border-radius(2px);
+            background-color: $ligth;
+            border: none;
+            padding: 20px 50px;
+            font-weight: bold;
+            font-size: 1.4em;
+            margin-top: 5%;
+            margin-bottom: 15%;
+            font-family: $font1 !important;
+            &:hover{
+                @extend .btn;
+                border: 2px solid $ligth;
+                background-color: transparent;
+            }
+        }
+    }    
 }
