--- a/src/scss/_Name.scss
+++ b/src/scss/_Name.scss
@@ -25,7 +25,7 @@ header {
         }
         a.btn{
             @include border-radius(2px);
-            background-color: $ligth;
+            background-color: $light;
             border: none;
             padding: 20px 50px;
             font-weight: bold;
@@ -35,7 +35,7 @@ header {
             font-family: $font1 !important;
             &:hover{
                 @extend .btn;
-                border: 2px solid $ligth;
+                border: 2px solid $light;
                 background-color: transparent;
             }
         }
