--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat');
 
 // Colores
-$ligth : #ff685d; 
+$light : #ff685d; 
 $neutro : #ffffff;
 $dark : #222222;
 
