--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,7 +4,8 @@
 section.me {
   background-color: #222222;
   color: #ffffff;
-  text-align: center; }
+  text-align: center;
+  height: 100vh; }
   section.me h1.title {
     font-family: "Kaushan Script", cursive;
     font-weight: 800;
@@ -12,20 +13,24 @@ section.me {
     padding-top: 10%;
     padding-bottom: 1%;
     color: #ff685d; }
+  section.me p {
+    font-size: 1.2em; }
   section.me .aboutMe {
-    padding-bottom: 10%; }
+    padding-top: 5%;
+    padding-bottom: 3%; }
     section.me .aboutMe .photo {
       border: 7px solid #ffffff;
-      width: 20%; }
+      width: 35%; }
     section.me .aboutMe h4.name {
       font-family: "Montserrat", sans-serif;
       font-weight: 800;
       margin-bottom: 0px; }
-    section.me .aboutMe p.who {
-      padding-bottom: -10px; }
+    section.me .aboutMe .who {
+      padding-bottom: -10px;
+      font-size: 1.2em; }
     section.me .aboutMe .social {
       background-color: #ff685d;
-      color: white;
+      color: #ffffff;
       width: 40px;
       height: 40px;
       border-radius: 50%;
@@ -36,10 +41,8 @@ section.me {
       section.me .aboutMe .social .fa {
         padding: auto;
         padding-top: 25%; }
-
-.names-description {
-  font-size: 1.2em;
-  padding: 5% 17% 10% 17%; }
+  section.me p.description {
+    font-size: 1.2em; }
 
 header {
   background-image: url(../img/bg1.jpeg);
