--- a/src/scss/_Me.scss
+++ b/src/scss/_Me.scss
@@ -4,6 +4,7 @@ section.me{
     background-color: $dark;
     color: $neutro;
     text-align: center;
+    height: 100vh;
     h1.title{
         font-family: $font2;
         font-weight: 800;
@@ -12,23 +13,28 @@ section.me{
         padding-bottom: 1%;
         color: $light;
     }
+    p{
+        font-size: $sizep;
+    }
     .aboutMe{
-        padding-bottom: 10%;
+        padding-top: 5%;
+        padding-bottom: 3%;
         .photo{
             border: 7px solid $neutro;
-            width: 20%;
+            width: 35%;
         }
         h4.name{
             font-family: $font1;
             font-weight: 800;
             margin-bottom: 0px; 
         }
-        p.who{
+        .who{
             padding-bottom: -10px;
+            font-size: $sizep;
         }
         .social{
             background-color: $light;
-            color: white;
+            color: $neutro;
             width: 40px;
             height: 40px;
             border-radius: 50%;
@@ -42,21 +48,7 @@ section.me{
             }
         }
     }
+    p.description{
+        font-size: $sizep;
+    }
 }
-
-
-
-
-
-
-
-
-
-
-
-.names-description{
-    font-size: 1.2em;
-    padding: 5% 17% 10% 17%;
-}
-
-
