--- a/src/scss/_Me.scss
+++ b/src/scss/_Me.scss
@@ -1,10 +1,8 @@
-@import '_variables';
-
 section.me{
     background-color: $dark;
     color: $neutro;
     text-align: center;
-    height: 100vh;
+    height: 110vh;
     h1.title{
         font-family: $font2;
         font-weight: 800;
@@ -50,5 +48,7 @@ section.me{
     }
     p.description{
         font-size: $sizep;
+        margin-top: 25%;
+        text-align: justify;
     }
 }
